--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,9 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.8.21"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.21"
 
+    //шрифты
+    implementation "androidx.compose.ui:ui-text-google-fonts:1.5.4"
+
 
 
 }
